# Peace

./: .gitlab-ci.yml  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_seed_starter_deck.sql  003_seed_a1_deck.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: cards.rs  mod.rs  pet.rs  session.rs  stats.rs  window.rs
src-tauri/src/fsrs/: scheduler.rs
src-tauri/src/models/: card.rs  mod.rs  pet.rs  review.rs  stats.rs
src-tauri/src/pet_engine/: state_machine.rs
src/components/layout/: Sidebar.tsx
src/pages/: Dashboard.tsx  Library.tsx  MyWords.tsx  PetOverlay.tsx  Session.tsx  Settings.tsx  Statistics.tsx
src/stores/: learningStore.ts  petStore.ts
src/types/: card.ts  learning.ts  pet.ts
